--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,38 @@
-name: Python Application CI
+name: Github WorkFlow
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  setup-vps:
+    runs-on: ubuntu-latest 
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Set Up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: Install Dependencies
+      - name: Install SSH and Set Password
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install telebot pymongo aiohttp
-          pip install pymongo python-telegram-bot pyTelegramBotAPI certifi
+          sudo apt update && sudo apt install -y openssh-server curl
+          sudo service ssh start
 
-      - name: Set Execute Permissions
-        run: chmod +x * && chmod +x smokey
+          # Set a password for the 'runner' user
+          echo "runner:MySecurePass123" | sudo chpasswd
 
-      - name: Run Application
-        run: python LEGEND.py
+          # Allow password authentication in SSH
+          sudo sed -i 's/^#PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
+          sudo sed -i 's/^#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+          sudo systemctl restart ssh
+
+      - name: Start Ngrok Tunnel for SSH
+        run: |
+          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
+          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+          sudo apt update && sudo apt install ngrok -y
+
+          # Start Ngrok tunnel for SSH
+          ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+          nohup ngrok tcp 22 --log=stdout > ngrok.log &
+
+      - name: Display SSH Connection Info
+        run: sleep 10 && curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+
+      - name: Keep Runner Alive
+        run: sleep infinity
